# skipthestories

./: db.sqlite3  manage.py  pyproject.toml
skipthestories/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
static/js/: package-lock.json  package.json
templates/: index.html
templates/base/: base.html
templates/components/: hero.html  login.html  navbar.html  recipes.html  register.html
